load("@AvrToolchain//:helpers.bzl", "default_embedded_binary")
load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")

default_embedded_binary(
    name = "blinkExample",
    srcs = ["blinkExample.c"],
    copts = cpu_frequency_flag(),
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//app/setup:Setup",
        "@ElasticNodeMiddleware//:LedLib",
        "@ElasticNodeMiddleware//:ElasticNodeMiddlewareLib",
        "@ElasticNodeMiddleware//:Reconfigure_multibootLib",
        "@ElasticNodeMiddleware//:XMemLib",
        "@ElasticNodeMiddleware//:DebugLufaLib",
        "@ElasticNodeMiddleware//:ControlmanagerLib",
        "@ElasticNodeMiddleware//:FlashLib",
    ],
)

default_embedded_binary(
    name = "main",
    srcs = ["main.c"],
    copts = cpu_frequency_flag(),
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//app/setup:Setup",
        "@ElasticNodeMiddleware//:LedLib",
        "@ElasticNodeMiddleware//:ElasticNodeMiddlewareLib",
        "@ElasticNodeMiddleware//:Reconfigure_multibootLib",
        "@ElasticNodeMiddleware//:XMemLib",
        "@ElasticNodeMiddleware//:DebugLufaLib",
        "@ElasticNodeMiddleware//:ControlmanagerLib",
        "@ElasticNodeMiddleware//:FlashLib",
    ],
)

default_embedded_binary(
    name = "mainDEBUG",
    srcs = ["main.c"],
    copts = cpu_frequency_flag() + ["-DDEBUG"],
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//app/setup:Setup",
        "@ElasticNodeMiddleware//:LedLib",
        "@ElasticNodeMiddleware//:ElasticNodeMiddlewareLib",
        "@ElasticNodeMiddleware//:Reconfigure_multibootLib",
        "@ElasticNodeMiddleware//:XMemLib",
        "@ElasticNodeMiddleware//:DebugLufaLib",
        "@ElasticNodeMiddleware//:ControlmanagerLib",
        "@ElasticNodeMiddleware//:FlashLib",
    ],
)