load("@EmbeddedSystemsBuildScripts//Unity:unity.bzl", "generate_a_unity_test_for_every_file", "mock", "unity_test")

cc_library(
    name = "BitManipulationHdrForTesting",
    hdrs = ["header_replacements/EmbeddedUtilities/BitManipulation.h"],
    strip_include_prefix = "header_replacements",
    visibility = ["//visibility:public"],
)

### <mocks ###

mock(
    name = "mock_Bitmanipulation",
    srcs = ["//test:header_replacements/EmbeddedUtilities/BitManipulation.h"],
    copts = ["-DTEST"],
    deps = [
        ":BitManipulationHdrForTesting",
    ],
)

cc_library(
    name = "CircularBufferHdr",
    hdrs = [
        "//src:uart/circularBuffer/circularBuffer.h",
    ],
)
mock(
    name = "mock_CircularBuffer",
    srcs = [
        "//src:uart/circularBuffer/circularBuffer.h",
    ],
    copts = ["-DTEST"],
    deps = [
        "CircularBufferHdr",
    ],
)

cc_library(
    name = "SpiHdr",
    hdrs = [
        "//src:spi/spi.h",
    ],
)
mock(
    name = "mock_Spi",
    srcs = [
        "//src:spi/spi.h",
    ],
    copts = ["-DTEST"],
    deps = [
        "SpiHdr",
    ],
)

cc_library(
    name = "Uart_internalHdr",
    hdrs = [
        "//src:uart/uart_internal.h",
    ],
)
mock(
    name = "mock_Uart_internal",
    srcs = [
        "//src:uart/uart_internal.h",
    ],
    copts = ["-DTEST",],
    deps = [
        "Uart_internalHdr",
    ],
)

cc_library(
    name = "Interrupt_ManagerHdr",
    hdrs = [
        "//src:interruptManager/interruptManager.h",
    ],
)
mock(
    name = "mock_InterruptManager",
    srcs = [
        "//src:interruptManager/interruptManager.h",
    ],
    copts = ["-DTEST"],
    deps = [
        "Interrupt_ManagerHdr",
    ],
)

cc_library(
    name = "Interrupt_ManagerMockHdr",
    hdrs = [
        "//src:interruptManager/interruptManager_avr_Mock.h"
    ],
)
mock(
    name = "mock_InterruptManager_avr_Mock",
    srcs = [
        "//src:interruptManager/interruptManager_avr_Mock.h",
    ],
    copts = ["-DTEST"],
    deps = [
        "Interrupt_ManagerMockHdr",
    ],
)

cc_library(
    name = "XmemHdr",
    hdrs = [
        "//src:xmem/xmem.h",
    ],
)
mock(
    name = "mock_Xmem",
    srcs = [
        "//src:xmem/xmem.h",
    ],
    copts = ["-DTEST"],
    deps = [
        "XmemHdr",
    ],
)

cc_library(
    name = "FlashHdr",
    hdrs = [
        "//src:flash/flash.h",
    ],
)
mock(
    name = "mock_flash",
    srcs = [
        "//src:flash/flash.h",
    ],
    copts = ["-DTEST"],
    deps = [
        "FlashHdr",
    ],
)

cc_library(
    name = "Led_mcuHdr",
    hdrs = [
        "//src:led/led_mcu.h",
    ],
)
mock(
    name = "mock_led_mcu",
    srcs = [
        "//src:led/led_mcu.h",
    ],
    copts = ["-DTEST"],
    deps = [
        "Led_mcuHdr",
    ],
)

cc_library(
    name = "elasticNodeMiddleware_internalHdr",
    hdrs = [
        "//src:elasticNodeMiddleware/elasticNodeMiddleware_internal.h",
    ],
)
mock(
    name = "mock_elasticNodeMiddleware_internal",
    srcs = [
        "//src:elasticNodeMiddleware/elasticNodeMiddleware_internal.h",
    ],
    copts = ["-DTEST"],
    deps = [
        "elasticNodeMiddleware_internalHdr",
    ],
)
### mocks> ###

### <tests ###

# TODO: use ceil?
#unity_test(
#    file_name = "configuration_Test.c",
#    cexception = False,
#    copts = ["-DTEST"],
#    deps = [
#        "mock_flash",
#        "mock_InterruptManager_avr_Mock",
#        "mock_led_mcu",
#        "mock_elasticNodeMiddleware_internal",
#        "//src:ConfigurationTest",
#    ],
#)

# TODO: controlmanager

# TODO: debug

# TODO: finish:
#unity_test(
#    file_name = "ElasticNodeMiddleware_Test.c",
#    cexception = False,
#    copts = ["-DTEST"],
#    deps = [
#        "mock_Bitmanipulation",
#        "//src:ElasticNodeMiddlewareTest",
#    ],
#)

unity_test(
    file_name = "ElasticNodeMiddleware_internal_Test.c",
    cexception = False,
    copts = ["-DTEST"],
    deps = [
        "mock_Bitmanipulation",
        "//src:ElasticNodeMiddleware_internalTest",
    ],
)

# TODO: ElasticNodeMiddlewareMonitoring

# TODO: finish
unity_test(
    file_name = "flash_Test.c",
    cexception = False,
    copts = ["-DTEST"],
    deps = [
        "mock_Bitmanipulation",
        "mock_Spi",
        "mock_InterruptManager_avr_Mock",
        "mock_elasticNodeMiddleware_internal",
        "//src:FlashTest",
    ],
)

unity_test(
    file_name = "interrupt_manager_avr_Test.c",
    cexception = False,
    copts = ["-DTEST"],
    deps = [
        "mock_InterruptManager_avr_Mock",
        "//src:Interrupt_ManagerTest",
    ],
)

unity_test(
    file_name = "led_mcu_Test.c",
    cexception = False,
    copts = ["-DTEST"],
    deps = [
        "mock_Bitmanipulation",
        "//src:led_mcuTest",
    ],
)

# TODO: reconfigure_multiboot_avr

unity_test(
    file_name = "reconfigure_multiboot_internal_avr_Test.c",
    cexception = False,
    copts = ["-DTEST"],
    deps = [
        "//src:Reconfigure_multiboot_internal_avrTest",
    ],
)

# TODO: finish
unity_test(
    file_name = "spi_Test.c",
    cexception = False,
    copts = ["-DTEST"],
    deps = [
        "mock_InterruptManager",
        "mock_Bitmanipulation",
        "mock_Xmem",
#        "mock_Spi",
        "//src:SpiTest",
    ],
)

unity_test(
    file_name = "circularBuffer_Test.c",
    cexception = False,
    copts = ["-DTEST"],
    deps = [
        "mock_InterruptManager",
        "//src:CircularBufferTest",
    ],
)

unity_test(
    file_name = "uart_Test.c",
    cexception = False,
    copts = [
        "-DTEST",
        "-DF_CPU=1UL",
        "-DBAUD=1UL",
    ],
    deps = [
        "mock_InterruptManager",
        "mock_Uart_internal",
        "mock_CircularBuffer",
        "//src:UartTest",
    ],
)

unity_test(
    file_name = "uart_internal_Test.c",
    cexception = False,
    copts = ["-DTEST"],
    deps = [
        "mock_CircularBuffer",
        "mock_InterruptManager",
        "//src:Uart_internalTest",
    ],
)

unity_test(
    file_name = "xmem_Test.c",
    cexception = False,
    copts = ["-DTEST"],
    deps = [
        "mock_Bitmanipulation",
        "//src:XmemTest",
    ],
)

### tests> ###
